Makefile: clean up a little.
Make cdump-enumstr use libccan.a, rather than explicit ccan object: it's the
last one.

And mark submodcheck phony, as it is.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/external/Makefile
+++ b/external/Makefile
@@ -42,6 +42,8 @@ endif
 
 EXTERNAL_LDLIBS := -L${TARGET_DIR} $(patsubst lib%.a,-l%,$(notdir $(EXTERNAL_LIBS)))
 
+.PHONY: submodcheck
+
 submodcheck: $(FORCE)
 ifneq ($(VERSION),)
 	@tools/refresh-submodules.sh $(SUBMODULES)
