Makefile: mark more things as intermediaries.
This means we don't have to include them in our bundle.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/external/Makefile
+++ b/external/Makefile
@@ -62,6 +62,8 @@ ifeq ($(DEBUGBUILD),1)
 WALLY_OPTS=--enable-debug
 endif
 
+.INTERMEDIATE: $(TARGET_DIR)/libwally-core-build/src/secp256k1/libsecp256k1.la $(TARGET_DIR)/libwally-core-build/src/libwallycore.la
+
 $(TARGET_DIR)/libwally-core-build/src/libwallycore.% $(TARGET_DIR)/libwally-core-build/src/secp256k1/libsecp256k1.%: $(LIBWALLY_HEADERS) $(LIBSECP_HEADERS)
 	cd external/libwally-core && ./tools/autogen.sh
 	mkdir -p ${TARGET_DIR}/libwally-core-build
@@ -86,6 +88,8 @@ $(TARGET_DIR)/jsmn-build/jsmn.o: external/jsmn/jsmn.c Makefile
 
 $(TARGET_DIR)/libjsmn.a: $(TARGET_DIR)/jsmn-build/jsmn.o
 	$(AR) rc $@ $<
+
+.INTERMEDIATE: $(TARGET_DIR)/jsmn-build/jsmn.o
 
 # Need separate build dir: changes inside submodule make git think it's dirty.
 $(TARGET_DIR)/libbacktrace.a: external/libbacktrace/backtrace.h
