CI: make downgrade and slow integration tests depend on check-compiled-source step.
As pointed out by Alex Myers: we don't want to waste time running the
complex steps if the generated files are not up-to-date.

But we still run the faster "integration" tests (not valgrind or
sanitizer ones), since they often reveal early failures.

Signed-off-by: Rusty Russell <rusty@rustcorp.com.au>

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -296,7 +296,7 @@ jobs:
     name: Check we can downgrade the node
     runs-on: ubuntu-24.04
     needs:
-      - compile
+      - check-compiled-source
     strategy:
       fail-fast: false
       matrix:
@@ -496,7 +496,7 @@ jobs:
     env:
       RUST_PROFILE: small # Has to match the one in the compile step
     needs:
-      - compile
+      - check-compiled-source
     strategy:
       fail-fast: false
       matrix:
@@ -557,7 +557,7 @@ jobs:
       SLOW_MACHINE: 1
       TEST_DEBUG: 1
     needs:
-      - compile
+      - check-compiled-source
     strategy:
       fail-fast: false
       matrix:
