--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -118,6 +118,11 @@ jobs:
             VALGRIND: 1
             COMPILER: gcc
             DEBUG_BUILD: --enable-debugbuild
+          - CFG: compile-gcc-O1
+            VALGRIND: 1
+            COMPILER: gcc
+            COPTFLAGS_VAR: COPTFLAGS="-O1"
+            DEBUG_BUILD: --enable-debugbuild
           - CFG: compile-gcc-O3
             VALGRIND: 1
             COMPILER: gcc
@@ -133,6 +138,7 @@ jobs:
             ASAN: 1
             UBSAN: 1
             VALGRIND: 0
+            COPTFLAGS_VAR: COPTFLAGS="-O1"
             DEBUG_BUILD:
     steps:
       - name: Checkout
@@ -240,7 +246,7 @@ jobs:
       fail-fast: true
       matrix:
         include:
-          - CFG: compile-gcc
+          - CFG: compile-gcc-O1
             VALGRIND: 1
           - CFG: compile-clang-sanitizers
             VALGRIND: 0
@@ -521,7 +527,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        CFG: [compile-gcc]
+        CFG: [compile-gcc-O1]
         GROUP: [1,2,3,4,5,6,7,8,9,10]
     steps:
       - name: Checkout
